<resources>
    <string name="app_name">MyWorld</string>
    <string name="country_name">Nama Negara</string>
    <string name="country_detail">Detail Negara</string>
    <string name="account">About Me</string>
    <string name="exit">Exit to App</string>
    <string name="about_me">About Me</string>
    <string name="name">Muhammad Al Hafiz Rahmadhani</string>
    <string name="email">mhafiz.rahmadhani@gmail.com</string>
    <string name="national_flag">National Flag</string>
    <string name="canada">Canada</string>
    <string name="desc_canada">Canada is a country in the northern part of North America. Its ten provinces and three territories extend from the Atlantic to the Pacific and northward into the Arctic Ocean, covering 9.98 million square kilometres (3.85 million square miles), making it the world\'s second-largest country by total area. Its southern and western border with the United States, stretching 8,891 kilometres (5,525 mi), is the world\'s longest bi-national land border. Canada\'s capital is Ottawa, and its three largest metropolitan areas are Toronto, Montreal, and Vancouver.</string>
    <string name="detail_of_country">Detail of Country :</string>
    <string name="motto">Motto</string>
    <string name="capital_city">Capital City</string>
    <string name="government">Government</string>
    <string name="population">Population</string>
    <string name="currency">Currency</string>
    <string name="official_languages">Official Languages</string>
    <string name="log_out">Log Out</string>
    <string name="image">image</string>
    <string name="amari_usque_ad_mare">: Amari usque ad mare</string>
    <string name="ottawa">: Ottawa</string>
    <string name="english_and_france">: English and France</string>
    <string name="federal_parliamentery">: Federal Parliamentery</string>
</resources>