<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about_me"
    tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="60dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_account_photo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/img_account"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#BBDEFB"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="25dp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#BBDEFB"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/log_out" />
    </LinearLayout>

</ScrollView>